tests/__snapshots__/feature-watch-multiple-test-files-are-changed-stderr.snap.txt
Error: Type is 'string'.

  1 | import { expect, test } from "tstyche";
  2 | test("is number?", () => {
  3 |   expect<string>().type.toBe<number>();
    |                         ~~~~~~~~~~
  4 | });
  5 | 

      at ./a-feature/__typetests__/isNumber.test.ts:3:25 ❭ is number?

Error: Type is 'number'.

  1 | import { expect, test } from "tstyche";
  2 | test("is string?", () => {
  3 |   expect<number>().type.toBe<string>();
    |                         ~~~~~~~~~~
  4 | });
  5 | 

      at ./b-feature/__typetests__/isString.test.ts:3:25 ❭ is string?

